deployments/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: vti-sonlh
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
